--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ url: "http://daattali.github.io/beautiful-jekyll"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Beautiful Jekyll
+title: Work in progress
 
 # Short description of your site
-description: Quickly build a beautiful Jekyll website
+description: The Postgres Compare blog
 
 # --- Navigation bar options --- #
 
@@ -31,30 +31,22 @@ navbar-links:
     - Getting started: "getstarted"
     - Featured users: "featured-users"
     - Project page: "https://github.com/daattali/beautiful-jekyll#readme"
-  About me: "http://deanattali.com"
+  About me: "aboutme"
 
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Dean Attali
-  email: "daattali@gmail.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
-  linkedin: "pub/dean-attali/8/946/143"
-  stackoverflow: "users/3943160/daattali"
- 
+  name: Neil Anderson
+  email: "neil.t.anderson@gmail.com"
+  twitter: neilAnders0n
+
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
   email: true
   twitter: true
-  github: true
-  linkedin: false
-  stackoverflow: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
@@ -85,7 +77,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts 
+      comments: true  # add comments to all blog posts
       show-share: true # add sharing buttons to all blog posts
   -
     scope:
