--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: The Postgres Compare blog
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/avatar-icon.svg"
 
 # List of links in the navigation bar
 navbar-links:
