--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ avatar: "/img/avatar-icon.png"
 # List of links in the navigation bar
 navbar-links:
   Home: ""
+  Postgres Compare: "www.postgrescompare.com"
   About me: "aboutme"
 
 # --- Footer options --- #
