use the new postgrescompare twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ navbar-links:
 author:
   name: Neil Anderson
   email: "neil@postgrescompare.com"
-  twitter: neilAnders0n
+  twitter: postgrescompare
 
 # Select which links to show in the footer
 footer-links-active:
