enable disqus commenting

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ url-pretty: "deanattali.com/beautiful-jekyll"  # eg. "deanattali.com/beautiful-j
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: "workinpostgres"
+disqus: "workinpostgres"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-43432786-2"
