--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
 #url: "http://username.github.io"
-#baseurl: ""
+baseurl: "/blog"
 
 # If you are building a GitHub project page then use these settings:
-url: "http://blog.postgrescompare.com"
+url: "http://www.postgrescompare.com"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
