--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
 #url: "http://username.github.io"
-#baseurl: "/blog"
+baseurl: "/blog"
 
 # If you are building a GitHub project page then use these settings:
 url: "http://www.postgrescompare.com/blog"
