--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # --- Serving options --- #
-
+gems:
+  - jekyll-redirect-from
 # url is the full website URL
 # baseurl is the website's URL without the hostname
 
