--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ gems:
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
 #url: "http://username.github.io"
-baseurl: "/blog"
+#baseurl: "/blog"
 
 # If you are building a GitHub project page then use these settings:
-url: "http://www.postgrescompare.com/blog"
+url: "http://blog.postgrescompare.com"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
